tests/good/interpret/041-disjunction-extract-pattern.clap
val classify = case { A[x] or B[x] => x | C => 0 }
val xA = classify (A[42])
val xB = classify (B[42])
val xC = classify (C)

