tests/bad/interpret/011-case-no-match.clap
val x = (case { A => 42 })(B)

